UPDATE PROJECT (application working with database) and 2 method added (Get clients and create new client)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,6 @@
-server:
-  port: 8082
+server.port: 8082
+spring.datasource.url: jdbc:postgresql://localhost:5432/bank_devops
+spring.datasource.username: bank_devops
+spring.datasource.password: admin123
+spring.datasource.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL92Dialect
+        ddl-auto: update
